tests/gabc-dump/should-fail/unopened-hepisema-adjustment.gabc
name: unopened horizontal episema adjustment;
%%
(c4) g(g) h(h[oh}])
